# DSA_problem_solving

./: README.md
HanoiTowers/: CMakeLists.txt
HanoiTowers/include/: Disco.h  Juego.h  Torre.h
HanoiTowers/src/: Disco.cpp  Juego.cpp  Torre.cpp  main.cpp
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
LogicBuilding/: CMakeLists.txt  closetNumber.cpp  evenOrOdd.cpp  sumNsquares.cpp
LogicBuilding/src/: CMakeLists.txt  eratosthenes.cpp
